--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -14,6 +14,22 @@
   margin-bottom: 0;
 }
 
+.form__input_type_error {
+  border-bottom-color: #ff0000;
+} 
+
+.form__input-error {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #FF0000;
+  visibility: hidden;
+}
+
+.form__input-error_active {
+  visibility: visible;
+}
+
 @media screen and (max-width: 568px) {
   .popup__title {
     font-size: 12px;
