validation in progress

--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -14,7 +14,7 @@
   margin-bottom: 0;
 }
 
-.form__input_type_error {
+.popup__input_type_error{
   border-bottom-color: #ff0000;
 } 
 
@@ -26,7 +26,7 @@
   visibility: hidden;
 }
 
-.form__input-error_active {
+.popup__error_visible {
   visibility: visible;
 }
 
