--- a/src/blocks/card/__like-button/card__like-button.css
+++ b/src/blocks/card/__like-button/card__like-button.css
@@ -18,3 +18,17 @@
 .card__like-button:hover {
   opacity: 0.6;
 }
+
+.card__like-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3px;
+}
+
+.card__like-amount {
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 16px;
+}
