--- a/src/blocks/popup/__content/popup__content.css
+++ b/src/blocks/popup/__content/popup__content.css
@@ -13,6 +13,10 @@
   min-height: 181px;
 }
 
+.popup__content_one-field {
+  min-height: 272px;
+}
+
 @media screen and (max-width: 568px) {
   .popup__content {
     width: 100%;
