--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -4,9 +4,26 @@
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   border-radius: 50%;
+  position: relative;
   background-size: cover;
   background-position: center;
   margin: 0 29px 0 0;
+}
+
+.profile__image-edit-button {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border: none;
+  border-radius: 50%;
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.8) url('../../../images/edit.svg') center no-repeat;
+}
+
+.profile__image-edit-button:hover {
+  opacity: 1;
 }
 
 @media screen and (max-width: 740px) {
